[package]
name = "bassbox"
version = "0.1.0"
authors = ["fwcd"]
edition = "2018"

[dependencies]
# Audio
dsp-chain = "0.13.1"
cpal = "0.10.0"
minimp3 = "0.3.3"
# RPC
jsonrpc-core = "13.0.0"
jsonrpc-derive = "13.0.0"
jsonrpc-stdio-server = "13.0.0"
## Required by jsonrpc-derive, see https://github.com/paritytech/jsonrpc/issues/481
serde = "1.0.99"
jsonrpc-core-client = "13.0.0"
