[package]
name = "bassbox-app"
version = "0.1.0"
authors = ["fwcd"]
edition = "2018"

[dependencies]
# General
getopts = "0.2"
byteorder = "1.3.2"
# Audio
# TODO: Update to official version once merged
dsp-chain = { git = "https://github.com/fwcd/dsp-chain", rev = "55ecc85" }
cpal = "0.10.0"
minimp3 = "0.3.3"
# RPC
bassbox-rpc-api = { path = "../rpc-api" }
jsonrpc-core = "13.0.0"
jsonrpc-derive = "13.0.0"
jsonrpc-stdio-server = "13.0.0"
## Required by jsonrpc-derive, see https://github.com/paritytech/jsonrpc/issues/481
serde = "1.0.99"
jsonrpc-core-client = "13.0.0"
