[package]
name = "bassbox-app"
version = "0.1.0"
authors = ["fwcd"]
edition = "2018"

[dependencies]
# Sibling modules
bassbox-core = { path = "../core" }
bassbox-graph-api = { path = "../graph-api" }
# General
getopts = "0.2"
# Audio
# TODO: Update to official version once merged
# TODO: Remove and replace by graph-api
dsp-chain = { git = "https://github.com/fwcd/dsp-chain", rev = "55ecc85" }
# RPC
jsonrpc-core = "13.0.0"
jsonrpc-derive = "13.0.0"
jsonrpc-stdio-server = "13.0.0"
## Required by jsonrpc-derive, see https://github.com/paritytech/jsonrpc/issues/481
serde = "1.0.99"
jsonrpc-core-client = "13.0.0"
