[package]
name = "bassbox-core"
version = "0.1.0"
authors = ["fwcd"]
edition = "2018"

[dependencies]
# General
byteorder = "1.3.2"
parking_lot = "0.9.0"
log = "0.4.8"
# Audio
# TODO: Update to official version once merged
dsp-chain = { git = "https://github.com/fwcd/dsp-chain", rev = "55ecc85" }
cpal = "0.10.0"
minimp3 = "0.3.3"
